<resources>
    <string name="app_name">Expense book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password" />
    <string name="username" />
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="selected_language">English</string>
    <string name="language">English</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="account_settings">Account Settings</string>
    <string name="notification_widget">Notification Widget ⁽ᶜᵒᵐᶦⁿᵍ ˢᵒᵒⁿ⁾</string>
    <string name="app_lock">Account Type</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="logout">Logout</string>
    <string name="books">Books</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="AddBookTag">Add Book</string>
    <string name="AddNameTag">NoteBook Name</string>
    <string name="SelectDateFirstTag">Select Date First</string>
    <string name="selectDateButton">Select Date</string>
    <string name="SaveButton">Save</string>
    <string name="CancelButton">Cancel</string>
    <string name="DeleteButton">Delete</string>
    <string name="AddExpenseBook">Add Expense Book</string>
    <string name="amountinout">Enter Amount</string>
    <string name="insidetag">Enter Expense Name</string>
    <string name="NetBalance">Net Balance</string>
    <string name="TotalIn">Total In(+)</string>
    <string name="TotalOut">Total Out(-)</string>
    <string name="CashIN">+ CASH IN</string>
    <string name="CashOut">- CASH OUT</string>
    <string name="providename">Please Provide Name</string>
    <string name="generalSetting">General Setting</string>
    <string name="otherSetting">Other Setting</string>
    <string name="BussinessAccount">Bussiness Account</string>
    <string name="PersonalAccount">Personal Account</string>
    <string name="Bothtypes">Both Types</string>
    <string name="AccountType">Account Type</string>
    <string name="Bussiness">Bussiness</string>
    <string name="Personal">Personal</string>
    <string name="Both">Both</string>
    <string name="Account">Account</string>
    <string name="Settings">Settings</string>
    <string name="HelpandSupport">Help and Support</string>
    <string name="ExpenseBook">Expense Book</string>

    <string name="defination">" 1, An expense book is a tool for keeping track of expenses. This app allows you to record all of your financial transactions, whether you earn or spend money"\n
        \n
    2. To track your daily expense such as shopping , tickets, daily cash withdrawal, and other. This app will help you to record such things\n
        \n
    3. If you are using it as an business account then use track daily inflow and outflow of money within daily business such as salary, item ordered and payment dues</string>

    <string name="edit"> Step 1. long press the entry, you want to edit \n
        \n
        Step 2. Enter the new Fields such as amount and tag of expense\n
        \n
        Step 3. Click Sava button to save it otherwise click cancel.
    </string>

    <string name="create">"To create a new expense book follows the following steps:-\n
        \n
    Step 1. To create a notebook first click on "+" sign on the bottom right hand side to add a new notebook\n
        \n
    Step 2. A dialog open up from the bottom then add notebook name and select date\n
        \n
    Note :- Notebook name is mandatory, without name notebook could not be created\n
        \n
    Step 3. Click the save button to save the expense book and expense will be created</string>


    <string name="deleterename">To delete or rename Expense Book follows the following steps:-\n
        \n
    Step 1. Long press the book you wish to delete or rename\n
        \n
    Step 2. add the new name or date you wish to add\n
        \n
    Step 3. If you wish to delete expense book then press delete button\n
        \n
    Step 4. Otherwise, select save if you want to rename it.</string>


    <string name="changeLanguage">To change language of the whole application follow the following steps:-\n
        \n
    Step 1. Go to the setting page using the bottom navigation\n
        \n
    Step 2. click the "Change Language" button on the setting page\n
        \n
    Step 3. Select the language you want to use, currently only two language options are available "Hindi" and "English"
    </string>

    <string name="search">To search for the expense book follow given steps:-\n
        \n
    Step 1. Press the search button on the top right hand side of the books page\n
        \n
    Step 2. Press Type the name of the notebook you want to search\n
        \n
        Note :- if Notebook does not exist then search results will be empty\n
    Step 3. Return to the home book page by clicking back button\n

    </string>
    <string name="code">Code</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="login">Login</string>


</resources>