<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layout_marginTop="5dp"
    tools:context=".Setting">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView2"
        android:name="com.example.cashbook.BottomFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/scrollView3"
        tools:layout="@layout/fragment_bottom" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.001">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/personImage"
                            android:layout_width="100dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/person" />

                        <LinearLayout
                            android:layout_width="334dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/nameId"
                                android:textColor="@color/textColor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="50dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginRight="50dp"
                                android:hint="@string/enter_name"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/numId"
                                android:layout_width="match_parent"
                                android:textColor="@color/textColor"
                                android:layout_height="20dp"
                                android:layout_marginLeft="50dp"
                                android:layout_marginRight="50dp"
                                android:hint="@string/enter_number"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/editUser"
                            android:layout_width="30dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:clickable="true"
                            android:contentDescription="@string/add"
                            android:minWidth="48dp"
                            android:minHeight="48dp"
                            app:srcCompat="@drawable/d" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/textColor"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/account_settings"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:elevation="5dp"
                app:cardUseCompatPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/notification" />

                    <TextView
                        android:id="@+id/notification"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textColor="@color/textColor"
                        android:gravity="center_vertical"
                        android:text="@string/notification_widget"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_marginTop="8dp"
                android:elevation="5dp"
                app:cardUseCompatPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="6dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/lock" />

                    <TextView
                        android:id="@+id/applock"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:textColor="@color/textColor"
                        android:gravity="center_vertical"
                        android:text="@string/app_lock"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:elevation="5dp"
                app:cardUseCompatPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView4"
                app:layout_marginBaseline="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/night"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:contentDescription="@string/add"
                        app:srcCompat="@drawable/dark" />

                    <TextView
                        android:id="@+id/theme"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:textColor="@color/textColor"
                        android:gravity="center_vertical"
                        android:text="@string/dark_theme"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Switch
                        android:id="@+id/switch4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:elevation="5dp"
                app:cardUseCompatPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/language" />

                    <TextView
                        android:id="@+id/language"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textColor="@color/textColor"
                        android:gravity="center_vertical"
                        android:text="@string/change_language"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/languageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center_horizontal"
                        android:hint="@string/english"
                        android:minHeight="48dp"
                        android:textColor="@color/textColor" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/textColor"
                android:gravity="center_horizontal|center_vertical"
                android:text="Others"
                android:textSize="16dp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:elevation="5dp"
                app:cardUseCompatPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView23">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/invite" />

                    <TextView
                        android:id="@+id/share"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:textColor="@color/textColor"
                        android:text="@string/share_with_friends"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:elevation="5dp"
                app:cardUseCompatPadding="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_baseline_login_24" />

                    <TextView
                        android:id="@+id/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:text="@string/logout"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>